<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragment.FAQFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/mainColor"
        android:padding="15dp"
        android:text="@string/ques_1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/green"
        android:padding="15dp"
        android:text="@string/ans_1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/mainColor"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/ques_2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/green"
        android:padding="15dp"
        android:text="@string/ans_2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/mainColor"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/ques_3"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/green"
        android:padding="15dp"
        android:text="@string/ans_3"
        />


</LinearLayout>